--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .wrapper {
 	min-height: 100dvh;
-
 	display: grid;
 	place-content: center;
 }
@@ -29,13 +28,20 @@
 	background-size: contain;
 	background-position: center;
 	margin: 0;
-
 	display: grid;
 	place-content: center;
 }
 
 .card__body {
 	padding: 0 1.25em;
+	opacity: 0;
+	transform: scale(0);
+}
+
+.animate {
+	opacity: 1;
+	transform: scale(1);
+	animation: appear 1s forwards;
 }
 
 .card__quote {
@@ -66,4 +72,15 @@
 	border: 2px solid white;
 	border-radius: 8px;
 	cursor: pointer;
+}
+
+@keyframes appear {
+	from {
+		opacity: 0;
+		transform: scale(0);
+	}
+	to {
+		opacity: 1;
+		transform: scale(1);
+	}
 }
